<resources>
    <string name="app_name">Monster</string>
    <string name="account">Account</string>
    <!-- fragments and navigation -->
    <string name="flavors">Flavors</string>
    <string name="flavor">Flavor</string>
    <string name="content_can_image">image of flavor can</string>
    <string name="content_can_large_image">large image of flavor can</string>
    <string name="flavor_profile">Flavor profile</string>
    <string name="product">Product</string>
    <string name="unleashed">Unleashed</string>
    <string name="content_like_flavor">like flavor</string>
    <string name="content_dislike_flavor">dislike flavor</string>
    <string name="zero">0</string>
    <string name="tag">Tag</string>
    <string name="type">Type</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="profile">Profile</string>
    <string name="rating">Rating</string>
    <string name="content_decrease_unleashed">decrease unleashed monsters</string>
    <string name="content_increase_unleashed">increase unleashed monsters</string>
    <string name="content_rating_slider">rating slider</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="sound_header">Sound</string>

    <!-- Sound Preferences -->
    <string name="plus_sound_title">Play plus sound</string>
    <string name="plus_sound_summary_on">Play sound of opening a can tab</string>
    <string name="plus_sound_summary_off">Mute sound of opening a can tab</string>

    <string name="minus_sound_title">Play minus sound</string>
    <string name="minus_sound_summary_on">Play sound of crushing a can</string>
    <string name="minus_sound_summary_off">Mute sound of crushing a can</string>
</resources>